[TASK-4] Collection of tests. Several tweaks for: H2, DTOs, error handling